# shinobi

./: .gitignore  .gitmodules  BUILD.gn  LICENSE
data/lexer_test/: good_sample1.shi
docs/: target.txt
src/: arbor.cc  arbor.hh  main.cc  target.hh  target_tree.hh
src/base/: BUILD.gn  aliases.hh  assert.hh  assert_linux.cc  location.cc  location.hh  logging.cc  logging.hh  path.hh  stl_include.hh  using_log.hh
src/language/: BUILD.gn  sema.hh
src/language/shi/: exception.cc  exception.hh  lexer.cc  lexer.hh  lexer_test.cc  node.cc  node.hh  parser.cc  parser.hh  parser_test.cc  sema.hh  token.cc  token.hh  writer.cc  writer.hh
src/path/: label.hh
src/test/: BUILD.gn  main.cc
