shared_library("languages") {
  public_deps = [
    ":shi",
  ]
}

source_set("shi") {
  sources = [
    "shi/exception.hh",
    "shi/lexer.cc",
    "shi/lexer.hh",
    "shi/node.hh",
    "shi/parser.cc",
    "shi/parser.hh",
    "shi/token.cc",
    "shi/token.hh",
  ]

  deps = [
    "//src/base:base",
  ]
}
