executable("unit_tests") {
  testonly = true

  sources = [
    "main.cc",
    "//src/language/shi/lexer_test.cc",
    "//src/language/shi/parser_test.cc",
  ]

  deps += [
    "//src/base:base",
    "//src/language:languages",
    "//src/third_party/gflags:gflags",
    "//src/third_party/gtest:gtest",
  ]
}
